	- update trayicon with status and set different icon if active
	- handle system-tray not supported case

release 0.4
	- allow sorting by status running/paused
	- save window settings: size, position, visibility and sort-column

release 0.5
	- implemented categories using colors
	- implemented manually editing time for overall/today
	- tray-icon: gray for inactive, green for active

release 0.6
	- fixed: adjust time-overall when manually setting time-today
	- category chooser:
		- changed available colors
		- added option for choosing custom color
	- fixed possible loss of data: installed shutdown-hook for saving projects

release 0.7
	- when a project is running, set different window icon as well
	- added icons for custom/reset-color buttons
	- added additional column with multi-purpose checkbox
	- implemented logging of project changes
	- save runtime-file in separate directory
	- save/load projects as XML instead of using java serialization
	- implemented highlighting of rows by keyword

release 0.8
	- fixed: save project data as UTF-8 no matter what encoding is set by system locale

release 0.9
	- start/pause current project via tray-menu
	- created Java application launcher (Windows & Unix)
	- added keyboard shortcuts for start/pause, new and delete project
	- on startup copy project file as backup
	- option for removing all general-purpose checkboxes at once
	- worked around bug where projects were not saved on a hard shutdown

release 1.0
	- fixed inserting a new project with shortcut key when no table row selected
	- date of creation can now be edited
	- option for removing and color-reset all entries
	- added quota option for time today and overall
	- additional notes for a project
	- added a log area, which visibility can be toggled

release 1.1
	- show time-quota on mouse-mouse over overall/today cell
	- automatically un-check projects on today-time-reset
	- ampersand-character in project-title not shown in tray-tooltip
