@@ -12,7 +12,8 @@ import de.dominik_geyer.jtimesched.project.ProjectTime;
 public class TimeCellComponent extends JLabel {
 	private static final Color BAR_COLOR = new Color(80, 200, 80);
 	private static final Color BAR_COLOR_OVERDUE = new Color(200, 50, 50);
-	private static final int BAR_HEIGHT = 2;
+	private static final int BAR_HEIGHT = 3;
+	private static final int BAR_THRESHOLD = 1;
 	
 	private static final Color HASQUOTA_COLOR = new Color(50, 50, 200);
 	private static final int HASQUOTA_HEIGHT = 3;
@@ -43,11 +44,14 @@ public class TimeCellComponent extends JLabel {
 				? this.getWidth() * this.time / this.quota
 				: this.getWidth();
 			
-			g.setColor(color);
-			g.fillRect(0, 0, width, TimeCellComponent.BAR_HEIGHT);
-			
-			g.setColor(TimeCellComponent.HASQUOTA_COLOR);
-			g.fillRect(0, 0, TimeCellComponent.HASQUOTA_HEIGHT, TimeCellComponent.HASQUOTA_HEIGHT);
+			if (width > TimeCellComponent.BAR_THRESHOLD) {
+				g.setColor(color);
+				g.fillRect(0, 0, width, TimeCellComponent.BAR_HEIGHT);
+			} else {
+				// indicate quota if bar not yet visible
+				g.setColor(TimeCellComponent.HASQUOTA_COLOR);
+				g.fillRect(0, this.getHeight() - TimeCellComponent.HASQUOTA_HEIGHT - 1, TimeCellComponent.HASQUOTA_HEIGHT, TimeCellComponent.HASQUOTA_HEIGHT);
+			}
 		}
 	}
 }
